src/test/deca/context/invalid/class/protected.deca
// invalide : erreur ligne 9, protected.

class A{
    protected float b;
}

{
    A a = new A();
    println(a.b);
}